fixed the ui for projects

--- a/index.html
+++ b/index.html
@@ -626,134 +626,49 @@
         <div class="projects-section" id="projects-section">
           <div class="project-card">
             <div class="project-row">
-              <div class="project-column" >
+              <div class="project-column">
                 <img src="./Ashish Jha __ Home_files/project1.png" alt="Project Image" class="project-image">
               </div>
               <div class="project-column" style="flex-basis: 50%;">
                 <div class="project-description">
                   <h3>Nav Finder Backend</h3>
                   <p>
-                    This project is a comprehensive web application built using <strong>HTML</strong>,
-                    <strong>CSS</strong>,
-                    <strong>JavaScript</strong>, <strong>TypeScript</strong>, <strong>React</strong>,
-                    <strong>Redux</strong>,
-                    and <strong>Angular</strong>. It showcases a variety of frontend development skills and best
-                    practices.
+                    Navfinder is a revolutionary travel platform dedicated to streamlining travel logistics and solving
+                    transportation challenges for users. With a focus on providing seamless travel and item
+                    transportation solutions, Navfinder offers a user-friendly interface and robust features to simplify
+                    the entire process. From planning and booking to managing travel arrangements and item shipments,
+                    Navfinder aims to redefine the way people navigate their journeys and transport their belongings.
                   </p>
-                  <div class="project-button-container">
-                    <button class="project-btn know-more">Know More</button>
-                    <button class="project-btn github">GitHub</button>
-                  </div>
+
                 </div>
               </div>
             </div>
-            <div class="project-row">
-              <div class="project-column" style="flex-basis: 100%;">
+            <div class="project-row" style="flex-basis: 40%;">
+                     <div class="project-button-container">
+                  <button class="project-btn know-more">
+                      <i class="fas fa-info-circle"></i> Know More
+                  </button>
+                  <button class="project-btn github">
+                      <i class="fab fa-github"></i> GitHub
+                  </button>
+              </div>
+              <div class="project-column" style="flex-basis: 0%;">
                 <div class="project-tags">
-                  <span class="tag">HTML</span>
-                  <span class="tag">CSS</span>
                   <span class="tag">JavaScript</span>
                   <span class="tag">TypeScript</span>
-                  <span class="tag">React</span>
-                  <span class="tag">Redux</span>
-                  <span class="tag">Angular</span>
+                  <span class="tag">NodeJs</span>
+                  <span class="tag">Express Js</span>
+                  <span class="tag">MongoDB</span>
+                  <span class="tag">AWS</span>
+                  <span class="tag">Mongoose</span>
+                  <span class="tag">OAuth</span>
                 </div>
               </div>
             </div>
           </div>
         </div>
 
-        <!-- Backend Section -->
-        <div class="skills-card">
-          <h3 style="color: darkgreen;">Backend</h3>
-          <section class="skills">
-            <div class="skill-box">
-              <i class="fab fa-java"></i>
-              <span>Java</span>
-            </div>
-            <div class="skill-box">
-              <i class="fab fa-node-js"></i>
-              <span>Node.js</span>
-            </div>
-            <div class="skill-box">
-              <i class="fas fa-server"></i>
-              <span>Express</span>
-            </div>
-            <div class="skill-box">
-              <i class="fas fa-leaf"></i>
-              <span>Spring Boot</span>
-            </div>
-            <div class="skill-box">
-              <i class="fas fa-database"></i>
-              <span>Hibernate</span>
-            </div>
-            <div class="skill-box">
-              <i class="fas fa-lock"></i>
-              <span>Spring <br> Security</span>
-            </div>
-            <div class="skill-box">
-              <i class="fas fa-cloud"></i>
-              <span>Spring <br> Cloud</span>
-            </div>
-          </section>
-        </div>
-
-        <!-- Database Section -->
-        <div class="skills-card">
-          <h3 style="color: darkgreen;">Database</h3>
-          <section class="skills">
-            <div class="skill-box">
-              <i class="fas fa-database"></i>
-              <span>MySQL</span>
-            </div>
-            <div class="skill-box">
-              <i class="fas fa-database"></i>
-              <span>PostgreSQL</span>
-            </div>
-            <div class="skill-box">
-              <i class="fas fa-database"></i>
-              <span>MongoDB</span>
-            </div>
-            <div class="skill-box">
-              <i class="fas fa-database"></i>
-              <span>Mongoose</span>
-            </div>
-            <div class="skill-box">
-              <i class="fas fa-database"></i>
-              <span>Redis</span>
-            </div>
-          </section>
-        </div>
-
-        <!-- Tools Section -->
-        <div class="skills-card">
-          <h3 style="color: darkgreen;">Tools</h3>
-          <section class="skills">
-            <div class="skill-box">
-              <i class="fab fa-git-alt"></i>
-              <span>Git</span>
-            </div>
-            <div class="skill-box">
-              <i class="fab fa-docker"></i>
-              <span>Docker</span>
-            </div>
-            <div class="skill-box">
-              <i class="fas fa-stream"></i>
-              <span>Kafka</span>
-            </div>
-            <div class="skill-box">
-              <i class="fab fa-aws"></i>
-              <span>AWS</span>
-            </div>
-            <div class="skill-box">
-              <i class="fab fa-linux"></i>
-              <span>Linux</span>
-            </div>
-            <div class="skill-box">
-              <i class="fab fa-npm"></i>
-              <span>NPM</span>
-            </div>
-          </section>
+       
         </div>
     </div>
     </article>
