added new projects

--- a/index.html
+++ b/index.html
@@ -669,6 +669,138 @@
             </div>
           </div>
         </div>
+        <div class="projects-section" id="projects-section">
+          <div class="project-card">
+            <div class="project-row">
+              <div class="project-column">
+                <img src="./Ashish Jha __ Home_files/project1.png" alt="Project Image" class="project-image">
+              </div>
+              <div class="project-column" style="flex-basis: 50%;">
+                <div class="project-description">
+                  <h3>Nav Finder Backend</h3>
+                  <p>
+                    Navfinder is a revolutionary travel platform dedicated to streamlining travel logistics and solving
+                    transportation challenges for users. With a focus on providing seamless travel and item
+                    transportation solutions, Navfinder offers a user-friendly interface and robust features to simplify
+                    the entire process. From planning and booking to managing travel arrangements and item shipments,
+                    Navfinder aims to redefine the way people navigate their journeys and transport their belongings.
+                  </p>
+
+                </div>
+              </div>
+            </div>
+            <div class="project-row" style="flex-basis: 40%;">
+                     <div class="project-button-container">
+                  <button class="project-btn know-more">
+                      <i class="fas fa-info-circle"></i> Know More
+                  </button>
+                  <button class="project-btn github">
+                      <i class="fab fa-github"></i> GitHub
+                  </button>
+              </div>
+              <div class="project-column" style="flex-basis: 0%;">
+                <div class="project-tags">
+                  <span class="tag">JavaScript</span>
+                  <span class="tag">TypeScript</span>
+                  <span class="tag">NodeJs</span>
+                  <span class="tag">Express Js</span>
+                  <span class="tag">MongoDB</span>
+                  <span class="tag">AWS</span>
+                  <span class="tag">Mongoose</span>
+                  <span class="tag">OAuth</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="projects-section" id="projects-section">
+          <div class="project-card">
+            <div class="project-row">
+              <div class="project-column">
+                <img src="./Ashish Jha __ Home_files/project1.png" alt="Project Image" class="project-image">
+              </div>
+              <div class="project-column" style="flex-basis: 50%;">
+                <div class="project-description">
+                  <h3>Nav Finder Backend</h3>
+                  <p>
+                    Navfinder is a revolutionary travel platform dedicated to streamlining travel logistics and solving
+                    transportation challenges for users. With a focus on providing seamless travel and item
+                    transportation solutions, Navfinder offers a user-friendly interface and robust features to simplify
+                    the entire process. From planning and booking to managing travel arrangements and item shipments,
+                    Navfinder aims to redefine the way people navigate their journeys and transport their belongings.
+                  </p>
+
+                </div>
+              </div>
+            </div>
+            <div class="project-row" style="flex-basis: 40%;">
+                     <div class="project-button-container">
+                  <button class="project-btn know-more">
+                      <i class="fas fa-info-circle"></i> Know More
+                  </button>
+                  <button class="project-btn github">
+                      <i class="fab fa-github"></i> GitHub
+                  </button>
+              </div>
+              <div class="project-column" style="flex-basis: 0%;">
+                <div class="project-tags">
+                  <span class="tag">JavaScript</span>
+                  <span class="tag">TypeScript</span>
+                  <span class="tag">NodeJs</span>
+                  <span class="tag">Express Js</span>
+                  <span class="tag">MongoDB</span>
+                  <span class="tag">AWS</span>
+                  <span class="tag">Mongoose</span>
+                  <span class="tag">OAuth</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="projects-section" id="projects-section">
+          <div class="project-card">
+            <div class="project-row">
+              <div class="project-column">
+                <img src="./Ashish Jha __ Home_files/project1.png" alt="Project Image" class="project-image">
+              </div>
+              <div class="project-column" style="flex-basis: 50%;">
+                <div class="project-description">
+                  <h3>Nav Finder Backend</h3>
+                  <p>
+                    Navfinder is a revolutionary travel platform dedicated to streamlining travel logistics and solving
+                    transportation challenges for users. With a focus on providing seamless travel and item
+                    transportation solutions, Navfinder offers a user-friendly interface and robust features to simplify
+                    the entire process. From planning and booking to managing travel arrangements and item shipments,
+                    Navfinder aims to redefine the way people navigate their journeys and transport their belongings.
+                  </p>
+
+                </div>
+              </div>
+            </div>
+            <div class="project-row" style="flex-basis: 40%;">
+                     <div class="project-button-container">
+                  <button class="project-btn know-more">
+                      <i class="fas fa-info-circle"></i> Know More
+                  </button>
+                  <button class="project-btn github">
+                      <i class="fab fa-github"></i> GitHub
+                  </button>
+              </div>
+              <div class="project-column" style="flex-basis: 0%;">
+                <div class="project-tags">
+                  <span class="tag">JavaScript</span>
+                  <span class="tag">TypeScript</span>
+                  <span class="tag">NodeJs</span>
+                  <span class="tag">Express Js</span>
+                  <span class="tag">MongoDB</span>
+                  <span class="tag">AWS</span>
+                  <span class="tag">Mongoose</span>
+                  <span class="tag">OAuth</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
        
         </div>
