added new projects

--- a/index.html
+++ b/index.html
@@ -520,17 +520,18 @@
           <div class="project-card">
             <div class="project-row">
               <div class="project-column">
-                <img src="./Ashish Jha __ Home_files/project1.png" alt="Project Image" class="project-image">
+                <img src="./Ashish Jha __ Home_files/project3.png" alt="Project Image" class="project-image">
               </div>
               <div class="project-column" style="flex-basis: 50%;">
                 <div class="project-description">
-                  <h3>Nav Finder Backend</h3>
+                  <h3>Spring Commerce</h3>
                   <p>
-                    Navfinder is a revolutionary travel platform dedicated to streamlining travel logistics and solving
-                    transportation challenges for users. With a focus on providing seamless travel and item
-                    transportation solutions, Navfinder offers a user-friendly interface and robust features to simplify
-                    the entire process. From planning and booking to managing travel arrangements and item shipments,
-                    Navfinder aims to redefine the way people navigate their journeys and transport their belongings.
+                    Spring Commerce is a comprehensive backend solution designed for scalable and efficient eCommerce
+                    platforms. Built with Spring Boot, it provides secure user authentication, seamless product
+                    management, efficient order processing, and integrated payment solutions. The application is
+                    optimized for performance and scalability, ensuring it can support growing online businesses while
+                    maintaining security and a smooth user experience. With its robust architecture, Spring Commerce
+                    offers a strong foundation for creating modern, feature-rich eCommerce platforms.
                   </p>
 
                 </div>
@@ -564,17 +565,13 @@
           <div class="project-card">
             <div class="project-row">
               <div class="project-column">
-                <img src="./Ashish Jha __ Home_files/project1.png" alt="Project Image" class="project-image">
+                <img src="./Ashish Jha __ Home_files/project4.png" alt="Project Image" class="project-image">
               </div>
               <div class="project-column" style="flex-basis: 50%;">
                 <div class="project-description">
-                  <h3>Nav Finder Backend</h3>
+                  <h3>Java Dev</h3>
                   <p>
-                    Navfinder is a revolutionary travel platform dedicated to streamlining travel logistics and solving
-                    transportation challenges for users. With a focus on providing seamless travel and item
-                    transportation solutions, Navfinder offers a user-friendly interface and robust features to simplify
-                    the entire process. From planning and booking to managing travel arrangements and item shipments,
-                    Navfinder aims to redefine the way people navigate their journeys and transport their belongings.
+                    A learning repository focused on mastering Spring Framework, JDBC, and Hibernate. This project includes practical examples and exercises to demonstrate key concepts, such as database connectivity, ORM (Object-Relational Mapping), and building robust web applications with Spring.
                   </p>
 
                 </div>
