--- a/index.html
+++ b/index.html
@@ -548,14 +548,16 @@
               </div>
               <div class="project-column" style="flex-basis: 0%;">
                 <div class="project-tags">
-                  <span class="tag">JavaScript</span>
-                  <span class="tag">TypeScript</span>
-                  <span class="tag">NodeJs</span>
-                  <span class="tag">Express Js</span>
-                  <span class="tag">MongoDB</span>
+                  <span class="tag">Java 17</span>
+                  <span class="tag">Spring Boot 3.3</span>
+                  <span class="tag">JPA</span>
+                  <span class="tag">Hibernate</span>
+                  <span class="tag">Maven</span>
+                  <span class="tag">REST API</span>
+                  <span class="tag">Spring Security</span>
+                  <span class="tag">MySQL</span>
                   <span class="tag">AWS</span>
-                  <span class="tag">Mongoose</span>
-                  <span class="tag">OAuth</span>
+                  <span class="tag">Docker</span>
                 </div>
               </div>
             </div>
@@ -571,7 +573,9 @@
                 <div class="project-description">
                   <h3>Java Dev</h3>
                   <p>
-                    A learning repository focused on mastering Spring Framework, JDBC, and Hibernate. This project includes practical examples and exercises to demonstrate key concepts, such as database connectivity, ORM (Object-Relational Mapping), and building robust web applications with Spring.
+                    A learning repository focused on mastering Spring Framework, JDBC, and Hibernate. This project
+                    includes practical examples and exercises to demonstrate key concepts, such as database
+                    connectivity, ORM (Object-Relational Mapping), and building robust web applications with Spring.
                   </p>
 
                 </div>
@@ -588,14 +592,15 @@
               </div>
               <div class="project-column" style="flex-basis: 0%;">
                 <div class="project-tags">
-                  <span class="tag">JavaScript</span>
-                  <span class="tag">TypeScript</span>
-                  <span class="tag">NodeJs</span>
-                  <span class="tag">Express Js</span>
-                  <span class="tag">MongoDB</span>
-                  <span class="tag">AWS</span>
-                  <span class="tag">Mongoose</span>
-                  <span class="tag">OAuth</span>
+                  <span class="tag">Java 17</span>
+                  <span class="tag">Spring Boot 3.3</span>
+                  <span class="tag">Spring </span>
+                  <span class="tag">JPA</span>
+                  <span class="tag">Hibernate</span>
+                  <span class="tag">Maven</span>
+                  <span class="tag">REST API</span>
+                  <span class="tag">Servelet</span>
+                  <span class="tag">MySQL</span>
                 </div>
               </div>
             </div>
