added new function

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                 <button class="project-btn know-more">
                   <i class="fas fa-info-circle"></i> Know More
                 </button>
-                <button class="project-btn github">
+                <button class="project-btn github" onclick="goTo('Link')">
                   <i class="fab fa-github"></i> GitHub
                 </button>
               </div>
