--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                 <button class="project-btn know-more">
                   <i class="fas fa-info-circle"></i> Know More
                 </button>
-                <button class="project-btn github">
+                <button class="project-btn github" onclick="goTo('https://github.com/RDGems/Nav-Finder-Backend')">
                   <i class="fab fa-github"></i> GitHub
                 </button>
               </div>
@@ -497,7 +497,7 @@
                 <button class="project-btn know-more">
                   <i class="fas fa-info-circle"></i> Know More
                 </button>
-                <button class="project-btn github" onclick="goTo('Link')">
+                <button class="project-btn github" onclick="goTo('https://github.com/Ashjha75/Express-APi-s-Learning')">
                   <i class="fab fa-github"></i> GitHub
                 </button>
               </div>
@@ -542,7 +542,7 @@
                 <button class="project-btn know-more">
                   <i class="fas fa-info-circle"></i> Know More
                 </button>
-                <button class="project-btn github">
+                <button class="project-btn github" onclick="goTo('https://github.com/Ashjha75/spring-commerce')">
                   <i class="fab fa-github"></i> GitHub
                 </button>
               </div>
@@ -586,7 +586,7 @@
                 <button class="project-btn know-more">
                   <i class="fas fa-info-circle"></i> Know More
                 </button>
-                <button class="project-btn github">
+                <button class="project-btn github" onclick="goTo('https://github.com/Ashjha75/javaDEV')">
                   <i class="fab fa-github"></i> GitHub
                 </button>
               </div>
