added media querry for mobile view

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <header class="hero">
     <div class=" hero-center wrapper">
       <div
-        style="z-index: 1; display: flex; justify-content: space-around; align-items: center; min-width: 100vw !important;"
+        style="z-index: 1; display: flex; justify-content: space-around; align-items: center; min-width: 100vw !important;padding: 12px;"
         class="section-center">
         <article class="hero-info">
           <div class="underline"></div>
@@ -337,7 +337,7 @@
     </div>
   </section>
   <section class="section bg-grey">
-    <div class="section-title exp-title" style="display: flex ; justify-content: center; align-items:end; gap: 20px;">
+    <div class="section-title exp-title" >
       <h2 class="experience">education</h2>
       <div>
       </div>
@@ -374,7 +374,7 @@
 
   <section class="section projects exp-sec">
 
-    <div class="section-title exp-title" style="display: flex ; justify-content: center; align-items:end; gap: 20px;">
+    <div class="section-title exp-title" >
       <h2 class="experience">Experience</h2>
       <div>
         <img src="./Ashish Jha __ Home_files/tree.gif" alt="tree"
@@ -809,7 +809,7 @@
 
 
   <Section class="contact">
-    <div class="section-title exp-title" style="display: flex ; justify-content: center; align-items:end; gap: 20px;">
+    <div class="section-title exp-title" >
       <h2 class="experience">Contact</h2>
       <!-- <div>
         <img src="./Ashish Jha __ Home_files/tree.gif" alt="tree"
@@ -880,7 +880,7 @@
     </div>
   </Section>
   <section class="section timeline">
-    <div class="section-title exp-title" style="display: flex ; justify-content: center; align-items:end; gap: 20px;">
+    <div class="section-title exp-title" >
       <h2 class="experience">timeline</h2>
     </div>
     <div class="section-center timeline-center">
