fixed merge and improve contact section

--- a/index.html
+++ b/index.html
@@ -846,7 +846,8 @@
         <br>
         <div class="contact-box">
           <span class="contact-info">+91 8860673349</span>
-          <span class="separator">|</span>
+          <span class="separator web-view">|</span>
+          <hr class="mbl-view">
           <span class="contact-info">network.ashishjha@gmail.com</span>
         </div>
 
