fixed some minor issue

--- a/index.html
+++ b/index.html
@@ -164,9 +164,10 @@
         <img src="./Ashish Jha __ Home_files/ashishj.jpg" class="hero-photos" alt="about img">
       </article>
       <article class="about-info">
-        <div class="section-title about-title">
-          <h2>about</h2>
-          <div class="underline"></div>
+        <div class="section-title exp-title">
+          <h2 class="experience">about</h2>
+          <div>
+          </div>
         </div>
         <p>
           Hello! I’m Ashish Jha, and I love building efficient, scalable web applications that solve real-world
@@ -185,7 +186,7 @@
           technologies to stay ahead in this fast-evolving field.
         </p>
 
-        <a class="btn" href="https://ashish5jha.github.io/portfolio/about">about me</a>
+        <!-- <a class="btn" href="https://ashish5jha.github.io/portfolio/about">about me</a> -->
       </article>
     </div>
   </section>
