--- a/index.html
+++ b/index.html
@@ -954,27 +954,17 @@
     <!-- social icons -->
     <ul class="social-icons">
       <li class="neumorph">
-        <a href="https://github.com/ashishjha" class="social-icon" target="_blank">
+        <a href="https://github.com/Ashjha75" class="social-icon" target="_blank">
           <i class="fab fa-github"></i>
         </a>
       </li>
       <li class="neumorph">
-        <a href="https://www.linkedin.com/in/ashish-jha-922a4a175/" class="social-icon" target="_blank">
+        <a href="https://www.linkedin.com/in/ashish5jha/" class="social-icon" target="_blank">
           <i class="fab fa-linkedin"></i>
         </a>
       </li>
       <li class="neumorph">
-        <a href="https://www.facebook.com/ashish6399/" class="social-icon" target="_blank">
-          <i class="fab fa-facebook"></i>
-        </a>
-      </li>
-      <li class="neumorph">
-        <a href="https://www.instagram.com/the_ashish.jha/" class="social-icon" target="_blank">
-          <i class="fab fa-instagram"></i>
-        </a>
-      </li>
-      <li class="neumorph">
-        <a href="https://twitter.com/JhaAshish_Dev" class="social-icon" target="_blank">
+        <a href="https://twitter.com/Ashish5Jha" class="social-icon" target="_blank">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
