--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
             </div>
             <div class="project-row" style="flex-basis: 40%;">
               <div class="project-button-container">
-                <button class="project-btn know-more">
+                <button class="project-btn know-more" onclick="redirectToPage('1')">
                   <i class="fas fa-info-circle"></i> Know More
                 </button>
                 <button class="project-btn github" onclick="goTo('https://github.com/RDGems/Nav-Finder-Backend')">
