added new changes for titles in some section

--- a/index.html
+++ b/index.html
@@ -195,9 +195,10 @@
       <article class="about-info">
         <div class="section-title about-title  "
           style="display: flex; justify-content: space-between;align-items: center;">
-          <div class="">
-            <h2>My tech stack</h2>
-            <div class="underline"></div>
+          <div class="section-title exp-title">
+            <h2 class="experience">My Tech Stack</h2>
+            <div>
+            </div>
           </div>
           <div class="panda">
             <img src="./Ashish Jha __ Home_files/panda.gif" alt="Hi_Panda" width="85px"
@@ -418,16 +419,10 @@
     <div class="section-center" style="width: 100%; justify-content: start;align-items: center;display: flex;">
 
       <article class="about-info">
-        <div class="section-title about-title  "
-          style="display: flex; justify-content: space-between;align-items: center;">
-          <div class="">
-            <h2>My Projects</h2>
-            <div class="underline"></div>
+        <div class="section-title exp-title">
+          <h2 class="experience">My Projects</h2>
+          <div>
           </div>
-          <!-- <div class="panda">
-            <img src="./Ashish Jha __ Home_files/panda.gif" alt="Hi_Panda" width="85px"
-              style="width: 85px;height: 85px;">
-          </div> -->
         </div>
 
         <div class="projects-section" id="projects-section">
