--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ashish Jha</title>
-  <link href="./Ashish Jha __ Home_files/all.min.css" rel="stylesheet">
+  <link href="./assets/all.min.css" rel="stylesheet">
   <!-- css -->
-  <link href="./Ashish Jha __ Home_files/styles.css" rel="stylesheet">
+  <link href="./assets/styles.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <!-----Fevicon----->
-  <link rel="apple-touch-icon" sizes="180x180" href="./Ashish Jha __ Home_files/logo.webp">
-  <link rel="icon" type="image/png" sizes="32x32" href="./Ashish Jha __ Home_files/logo.webp">
-  <link rel="icon" type="image/png" sizes="16x16" href="./Ashish Jha __ Home_files/logo.webp">
-  <link rel="manifest" href="./Ashish Jha __ Home_files/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/logo.webp">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/logo.webp">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/logo.webp">
+  <link rel="manifest" href="./assets/site.webmanifest">
 </head>
 <!-- Style -->
 
@@ -28,7 +28,7 @@
     <div class="nav-center">
 
       <div class="nav-header">
-        <a href="https://ashish5jha.github.io/portfolio/"><img src="./Ashish Jha __ Home_files/logo.webp" width="60px" height="60px"
+        <a href="https://ashish5jha.github.io/portfolio/"><img src="./assets/logo.webp" width="60px" height="60px"
             class="nav-logo" alt="nav logo"></a>
         <button class="nav-btn" id="nav-btn">
           <i class="fas fa-bars"></i>
@@ -50,12 +50,12 @@
       </ul>
     </div>
   </nav> -->
-  <a href="https://ashish5jha.github.io/portfolio/"><img src="./Ashish Jha __ Home_files/logo.webp" width="60px"
+  <a href="https://ashish5jha.github.io/portfolio/"><img src="./assets/logo.webp" width="60px"
       height="60px" class="nav-logo" alt="nav logo"></a>
 
   <!-- Resume Button -->
   <button href="#" class="button" style="--clr: #7808d0" onclick="getResume()">
-    <span class="download"> <img src="./Ashish Jha __ Home_files/download.png" alt="download"></span>
+    <span class="download"> <img src="./assets/download.png" alt="download"></span>
     Resume
   </button>
 
@@ -147,7 +147,7 @@
           </ul>
         </article>
         <article class="hero-img">
-          <img src="./Ashish Jha __ Home_files/ashish.jpg" class="hero-photo" alt="ashish jha">
+          <img src="./assets/ashish.jpg" class="hero-photo" alt="ashish jha">
         </article>
       </div>
       <div class="waves"></div>
@@ -161,7 +161,7 @@
   <section class="section about">
     <div class="section-center about-center">
       <article class="about-img">
-        <img src="./Ashish Jha __ Home_files/ashishj.jpg" class="hero-photos" alt="about img">
+        <img src="./assets/ashishj.jpg" class="hero-photos" alt="about img">
       </article>
       <article class="about-info">
         <div class="section-title exp-title">
@@ -201,7 +201,7 @@
             </div>
           </div>
           <div class="panda">
-            <img src="./Ashish Jha __ Home_files/panda.gif" alt="Hi_Panda" width="85px"
+            <img src="./assets/panda.gif" alt="Hi_Panda" width="85px"
               style="width: 85px;height: 85px;">
           </div>
         </div>
@@ -379,7 +379,7 @@
     <div class="section-title exp-title">
       <h2 class="experience">Experience</h2>
       <div>
-        <img src="./Ashish Jha __ Home_files/tree.gif" alt="tree"
+        <img src="./assets/tree.gif" alt="tree"
           style="width:  55px; height: 60px; margin-bottom: 10px;">
       </div>
     </div>
@@ -429,7 +429,7 @@
           <div class="project-card">
             <div class="project-row">
               <div class="project-column">
-                <img src="./Ashish Jha __ Home_files/project1.png" alt="Project Image" class="project-image">
+                <img src="./assets/project1.png" alt="Project Image" class="project-image">
               </div>
               <div class="project-column" style="flex-basis: 50%;">
                 <div class="project-description">
@@ -473,7 +473,7 @@
           <div class="project-card">
             <div class="project-row">
               <div class="project-column">
-                <img src="./Ashish Jha __ Home_files/project2.png" alt="Project Image" class="project-image">
+                <img src="./assets/project2.png" alt="Project Image" class="project-image">
               </div>
               <div class="project-column" style="flex-basis: 50%;">
                 <div class="project-description">
@@ -516,7 +516,7 @@
           <div class="project-card">
             <div class="project-row">
               <div class="project-column">
-                <img src="./Ashish Jha __ Home_files/project3.png" alt="Project Image" class="project-image">
+                <img src="./assets/project3.png" alt="Project Image" class="project-image">
               </div>
               <div class="project-column" style="flex-basis: 50%;">
                 <div class="project-description">
@@ -563,7 +563,7 @@
           <div class="project-card">
             <div class="project-row">
               <div class="project-column">
-                <img src="./Ashish Jha __ Home_files/project4.png" alt="Project Image" class="project-image">
+                <img src="./assets/project4.png" alt="Project Image" class="project-image">
               </div>
               <div class="project-column" style="flex-basis: 50%;">
                 <div class="project-description">
@@ -808,7 +808,7 @@
     <div class="section-title exp-title">
       <h2 class="experience">Contact</h2>
       <!-- <div>
-        <img src="./Ashish Jha __ Home_files/tree.gif" alt="tree"
+        <img src="./assets/tree.gif" alt="tree"
           style="width:  55px; height: 60px; margin-bottom: 10px;">
       </div> -->
     </div>
@@ -871,7 +871,7 @@
           </div>
         </div>
         <div class="sign">
-          <img src="./Ashish Jha __ Home_files/signature.png" alt="">
+          <img src="./assets/signature.png" alt="">
         </div>
       </div>
     </div>
@@ -989,7 +989,7 @@
       </div>
       <p>© <span id="date">2024</span> Ashish Jha. All rights reserved.</p>
   </footer>
-  <script src="./Ashish Jha __ Home_files/app.js"></script>
+  <script src="./assets/app.js"></script>
 </body>
 
 </html>
