--- a/index.html
+++ b/index.html
@@ -989,6 +989,20 @@
       </div>
       <p>© <span id="date">2024</span> Ashish Jha. All rights reserved.</p>
   </footer>
+  <footer class="last-footer">
+    <div class="last-fwaves">
+        <div class="last-fwave" id="last-wave1"></div>
+        <div class="last-fwave" id="last-wave2"></div>
+        <div class="last-fwave" id="last-wave3"></div>
+        <div class="last-fwave" id="last-wave4"></div>
+    </div>
+
+    <ul class="last-menu">
+        <li class="last-menu__item"><a class="last-menu__link" href="#">Home</a></li>
+        <li class="last-menu__item"><a class="last-menu__link" href="#">About us</a></li>
+        <li class="last-menu__item"><a class="last-menu__link" href="#">Contact us</a></li>
+    </ul>
+</footer>
   <script src="./assets/app.js"></script>
 </body>
 
