--- a/index.html
+++ b/index.html
@@ -945,56 +945,15 @@
   </section>
 
   <!-- footer -->
-   <footer class="footer">
+   <footer class="">
       <div class="footer-container">
-          <!-- First Column: About -->
-          <div class="footer-column">
-              <h3>About Me</h3>
-              <p>
-                  Hi, I'm Ashish Jha, a passionate web developer with a focus on creating seamless and efficient web applications. I love exploring new technologies and continuously improving my skills.
-              </p>
-          </div>
-  
-          <!-- Second Column: Social Media Icons -->
-          <div class="footer-column">
-              <h3>Follow Me</h3>
-              <ul class="social-icons">
-                  <li class="neumorph">
-                      <a href="https://github.com/Ashjha75" class="social-icon" target="_blank">
-                          <i class="fab fa-github"></i>
-                      </a>
-                  </li>
-                  <li class="neumorph">
-                      <a href="https://www.linkedin.com/in/ashish5jha/" class="social-icon" target="_blank">
-                          <i class="fab fa-linkedin"></i>
-                      </a>
-                  </li>
-                  <li class="neumorph">
-                      <a href="https://twitter.com/Ashish5Jha" class="social-icon" target="_blank">
-                          <i class="fab fa-twitter"></i>
-                      </a>
-                  </li>
-              </ul>
-          </div>
-  
-          <!-- Third Column: Website and Design References -->
-          <div class="footer-column">
-              <h3>Website & Design</h3>
-              <ul class="footer-links">
-                  <li><a href="https://yourwebsite.com" target="_blank">My Website</a></li>
-                  <li><a href="https://www.behance.net" target="_blank">Design Inspiration</a></li>
-                  <li><a href="https://www.dribbble.com" target="_blank">Dribbble</a></li>
-              </ul>
-          </div>
+         
       </div>
-      <p>© <span id="date">2024</span> Ashish Jha. All rights reserved.</p>
+      <p style="opacity: 0;">© <span id="date">2024</span> Ashish Jha. All rights reserved.</p>
   </footer>
   <footer class="last-footer">
     <div class="last-fwaves">
         <div class="last-fwave" id="last-wave1"></div>
-        <div class="last-fwave" id="last-wave2"></div>
-        <div class="last-fwave" id="last-wave3"></div>
-        <div class="last-fwave" id="last-wave4"></div>
     </div>
 
     <ul class="last-menu">
