Update footer styling and add navigation links
Adjust the minimum height of the last-footer section in styles.css to 70vh for better visibility. Also, add a new foot-container div in index.html to contain the navigation links. The foot-container is divided into two sections: foot-container1 and foot-container2. The foot-container1 contains an unordered list with navigation links, while the foot-container2 is left empty for future use.

--- a/index.html
+++ b/index.html
@@ -955,12 +955,18 @@
     <div class="last-fwaves">
         <div class="last-fwave" id="last-wave1"></div>
     </div>
-
-    <ul class="last-menu">
-        <li class="last-menu__item"><a class="last-menu__link" href="#">Home</a></li>
-        <li class="last-menu__item"><a class="last-menu__link" href="#">About us</a></li>
-        <li class="last-menu__item"><a class="last-menu__link" href="#">Contact us</a></li>
-    </ul>
+    <div class="foot-container">
+      <div class="foot-container1">
+        <ul class="foot-collection">
+          <li>Home</li>
+          <li>Experience</li>
+          <li>Project</li>
+          <li>Contact</li>
+          <li>Timeline</li>
+        </ul>
+      </div>
+      <div class="foot-container2"></div>
+  </div>
 </footer>
   <script src="./assets/app.js"></script>
 </body>
